--- a/formal_registration_form.html
+++ b/formal_registration_form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>formal_Registration From</title>
+    <title>INDEX.HTML</title>
     <link rel="stylesheet" type="text/css" href="formal_registration_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
